<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tituloDaIntroducao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloIntroducao"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:layout_below="@id/logo"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10sp"/>

    <TextView
        android:id="@+id/descricaoDaIntroducao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloDaIntroducao"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/descricaoIntroducao"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descricaoDaIntroducao"
        android:layout_centerInParent="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="@color/marrom"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnComecar"
        android:textSize="15sp"
        android:textStyle="normal"
        />

</RelativeLayout>